// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecordingTab.vue it has the correct pristine / empty state 1`] = `
<div
  class="tab recording-tab"
>
  <div
    class="content"
  >
    <div
      class="empty"
    >
      <img
        alt="desert"
        src=""
        width="0"
      />
      <h3>
        No recorded events yet
      </h3>
      <p
        class="text-muted"
      >
        Click record to begin
      </p>
      <div
        class="nag-cta"
      >
        <a
          href="https://checklyhq.com/headless-recorder"
          target="_blank"
        >
          Puppeteer Recorder is now 
          <strong>
            Headless Recorder
          </strong>
           and supports Playwright →
        </a>
      </div>
    </div>
    <div
      class="events"
      style="display: none;"
    >
      <p
        class="text-muted text-center loading"
      >
         Waiting for events 
      </p>
      <ul
        class="event-list"
      >
        
        
      </ul>
    </div>
  </div>
</div>
`;

exports[`RecordingTab.vue it has the correct recording DOM events state 1`] = `
<div
  class="tab recording-tab"
>
  <div
    class="content"
  >
    <div
      class="empty"
      style="display: none;"
    >
      <img
        alt="desert"
        src=""
        width="0"
      />
      <h3>
        No recorded events yet
      </h3>
      <p
        class="text-muted"
      >
        Click record to begin
      </p>
      <div
        class="nag-cta"
        style="display: none;"
      >
        <a
          href="https://checklyhq.com/headless-recorder"
          target="_blank"
        >
          Puppeteer Recorder is now 
          <strong>
            Headless Recorder
          </strong>
           and supports Playwright →
        </a>
      </div>
    </div>
    <div
      class="events"
    >
      <p
        class="text-muted text-center loading"
        style="display: none;"
      >
         Waiting for events 
      </p>
      <ul
        class="event-list"
      >
        
        <li
          class="event-list-item"
        >
          <div
            class="event-label"
          >
            1.
          </div>
          <div
            class="event-description"
          >
            <div
              class="event-action"
            >
              click
            </div>
            <div
              class="event-props text-muted"
            >
              .main &gt; a.link
            </div>
          </div>
        </li>
        
      </ul>
    </div>
  </div>
</div>
`;

exports[`RecordingTab.vue it has the correct recording Puppeteer custom events state 1`] = `
<div
  class="tab recording-tab"
>
  <div
    class="content"
  >
    <div
      class="empty"
      style="display: none;"
    >
      <img
        alt="desert"
        src=""
        width="0"
      />
      <h3>
        No recorded events yet
      </h3>
      <p
        class="text-muted"
      >
        Click record to begin
      </p>
      <div
        class="nag-cta"
        style="display: none;"
      >
        <a
          href="https://checklyhq.com/headless-recorder"
          target="_blank"
        >
          Puppeteer Recorder is now 
          <strong>
            Headless Recorder
          </strong>
           and supports Playwright →
        </a>
      </div>
    </div>
    <div
      class="events"
    >
      <p
        class="text-muted text-center loading"
        style="display: none;"
      >
         Waiting for events 
      </p>
      <ul
        class="event-list"
      >
        
        <li
          class="event-list-item"
        >
          <div
            class="event-label"
          >
            1.
          </div>
          <div
            class="event-description"
          >
            <div
              class="event-action"
            >
              goto*
            </div>
            <div
              class="event-props text-muted"
            >
              http://example.com
            </div>
          </div>
        </li>
        <li
          class="event-list-item"
        >
          <div
            class="event-label"
          >
            2.
          </div>
          <div
            class="event-description"
          >
            <div
              class="event-action"
            >
              viewport*
            </div>
            <div
              class="event-props text-muted"
            >
              width: 1280, height: 800
            </div>
          </div>
        </li>
        <li
          class="event-list-item"
        >
          <div
            class="event-label"
          >
            3.
          </div>
          <div
            class="event-description"
          >
            <div
              class="event-action"
            >
              navigation*
            </div>
            <div
              class="event-props text-muted"
            />
          </div>
        </li>
        
      </ul>
    </div>
  </div>
</div>
`;

exports[`RecordingTab.vue it has the correct waiting for events state 1`] = `
<div
  class="tab recording-tab"
>
  <div
    class="content"
  >
    <div
      class="empty"
      style="display: none;"
    >
      <img
        alt="desert"
        src=""
        width="0"
      />
      <h3>
        No recorded events yet
      </h3>
      <p
        class="text-muted"
      >
        Click record to begin
      </p>
      <div
        class="nag-cta"
        style="display: none;"
      >
        <a
          href="https://checklyhq.com/headless-recorder"
          target="_blank"
        >
          Puppeteer Recorder is now 
          <strong>
            Headless Recorder
          </strong>
           and supports Playwright →
        </a>
      </div>
    </div>
    <div
      class="events"
    >
      <p
        class="text-muted text-center loading"
      >
         Waiting for events 
      </p>
      <ul
        class="event-list"
      >
        
        
      </ul>
    </div>
  </div>
</div>
`;
